# challenge_DE

./: .env.example  .gitignore  Dockerfile  README.md  architecture_choices.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
data/events/: mock_event_logs.json
notebooks/: metrics.ipynb
src/ingestion/: log_reader.py
src/storage/: database.py  init_db.sql
src/transformation/: ingestion.py  transformation.py  validators.py
src/transformation/queries/: load_sessions.sql  load_trusted_documents.sql  load_trusted_events.sql  load_trusted_users.sql
